--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <div id="root"></div>
 
     <script>
+      // Initialize the Google Maps JavaScript API
       ((g) => {
         var h,
           a,
